# freemkv

./: .gitignore  AUDIT.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  FEATURES.md  LICENSE  Makefile  README.md  RELEASE.md  TESTPLAN.md  build.rs  list_directory.py  read_files.py
.github/.github/workflows/: update-readme.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/profile/: README.md
.github/workflows/: ci.yml  release.yml  update-readme.yml
locales/: de.json  en.json  es.json  fr.json  it.json  nl.json  pt.json
src/: bench.rs  disc_info.rs  info.rs  keydb_fetch.rs  main.rs  messaging.rs  output.rs  pipe.rs  remux.rs  rip.rs  scsi.rs  strings.rs  style.rs  test_support.rs
src/cmd/: disc_info.rs  drive_info.rs  info.rs  mod.rs  update_keys.rs  verify.rs
tests/: cli_tests.rs  messaging_contract.rs
