[package]
name = "freemkv"
version = "0.7.1"
edition = "2021"
license = "AGPL-3.0"
description = "Open source 4K UHD / Blu-ray / DVD backup tool"
repository = "https://github.com/freemkv/freemkv"

[[bin]]
name = "freemkv"
path = "src/main.rs"

[dependencies]
libfreemkv = "0.7"
isolang = "2"
libc = "0.2"
ureq = { version = "2", features = ["json"] }
zip = { version = "2", default-features = false, features = ["deflate"] }
serde_json = "1"
